# Paraplume

./: .isort.cfg  .pre-commit-config.yaml  EGNN.py  LICENCE  MANIFEST.in  README.md  add_convex_hull.py  add_convex_hull_mean.py  alpha_trainings.sh  check_labels.ipynb  clean_notebook.ipynb  create_dataset.py  create_dataset_single_chain.py  evaluate.py  evaluate_graph.py  evaluate_multimodel.py  get_labels.ipynb  graph.py  graph_model.py  graph_torch_dataset.py  grid_search.sh  grid_search2.sh  grid_search3.sh  grid_search4.sh  grid_search_expanded.sh  grid_search_multi.sh  grid_search_multi_deep.sh  grid_search_multi_very_deep.sh  grid_search_multi_very_deep_2411.sh  grid_search_multi_very_deep_4.sh  grid_search_multi_very_deep_convex.sh  grid_search_multi_very_deep_distance.sh  grid_search_pecan.sh  models.py  mypy.ini  notebook.ipynb  predict.py  predict_from_seq.py  predict_graph.py  pyproject.toml  (+22 more)
benchmark/: README.md
benchmark/6b0s/: pymol_script.txt  study.ipynb
benchmark/scripts/: chain_study_mipe.sh  chain_study_paragraph.sh  chain_study_pecan.sh  create_datasets_mipe_paired.sh  create_datasets_mipe_single.sh  create_datasets_paragraph_paired.sh  create_datasets_paragraph_single.sh  create_datasets_pecan_paired.sh  create_datasets_pecan_single.sh  train_mipe.sh  train_mipe_3D.sh  train_paragraph.sh  train_paragraph_3D.sh  train_pecan.sh  train_pecan_3D.sh
clustering/: run_paratope_model_dms_covid_aay49.sh  run_paratope_model_dms_covid_aay50.sh  run_paratope_model_dms_covid_aay51.sh  run_paratope_model_dms_covid_aay52.sh  run_paratope_model_epistasis.sh
data_with_scripts/: README.md
data_with_scripts/figure_notebooks/: figure3.ipynb  figure4.ipynb  figure4_separated.ipynb  figure5_separated.ipynb  figure6.ipynb  figure6_separated.ipynb  si_figure1.ipynb  si_figure2.ipynb  si_figure3.ipynb  si_figure4.ipynb  si_figure5.ipynb  si_figure6.ipynb  table1&2.ipynb  table3.ipynb  table4.ipynb  table_s1.ipynb  table_s2.ipynb  table_s3.ipynb
data_with_scripts/speed_tests/: compute_3D_structures.py  create_sets.ipynb  emissions.csv  emissions_abb3_gpu.csv  emissions_cpu.csv  emissions_gpu.csv  emissions_paraplume_cpu.csv  emissions_paraplume_gpu.csv  naive_sequences.csv  speed_cpu.txt  speed_gpu.txt  test1.csv  test10.csv  test100.csv  test1000.csv  test10000.csv  test_cpu.sh  test_speed_abb3_cpu.sh  test_speed_abb3_gpu.sh  test_speed_paraplume_cpu.sh  test_speed_paraplume_gpu.sh  time.ipynb  timing_results_abb3_cpu.txt  timing_results_abb3_gpu_10000.txt  timing_results_paraplume_cpu_10000.txt
datasets/: check_data.ipynb  notebook.ipynb  train.csv  val.csv
datasets/AACDB/: analyzing_aacdb.ipynb  antigen_antibody_data.csv  parse_aacdb_data.ipynb
datasets/concats/: make_new_splits.ipynb  sequences.csv  test_set.csv  train_set.csv  val_set.csv
datasets/mipe/: start.ipynb  test_set_heavy.csv  train_1.csv  train_3.csv  train_4.csv  train_val.csv  val_3.csv
datasets/paragraph/: test_set.csv  test_set_heavy.csv  test_set_light.csv  train_set_without_4fqi.csv
datasets/paragraph_all_expanded/: notebook.ipynb
datasets/paraplume/: make_new_splits.ipynb  old_paraplume.csv  paraplume.csv  paraplume_sequences.csv  removed_pdbs.txt  test.csv  train.csv  val.csv
datasets/pecan/: test_set.csv  test_set_light.csv  val_set.csv
datasets/philips/: train_set.csv
graph_extension/: evaluate_graph.py  graph_torch_dataset.py  model.py  predict_graph.py  train_graph_light.py
grid_search/: ablation_study.sh  ablation_study_mipe.sh  ablation_study_paragraph.sh  ablation_study_pecan.sh  final_mipe.sh  final_paragraph.sh  final_paraplume.sh  final_pecan.sh  for_paper.sh  graph_study_cdrs_mipe.sh  graph_study_cdrs_paragraph.sh  graph_study_paragraph.sh  mipe_250308.sh  mipe_250310.sh  mipe_250312.sh  mipe_3D_one_hot_train.sh  mipe_3D_one_hot_train_cv.sh  mipe_ablation_study_250324_just_esm.sh  paragraph_250304.sh  paragraph_250308.sh  paragraph_250310.sh  paragraph_3D_esm_train.sh  paragraph_3D_one_hot_train.sh  paragraph_3D_one_hot_train_gs.sh  paragraph_ablation_study_250324.sh  paragraph_ablation_study_250324_just_esm.sh  paragraph_ablation_study_250324_predonly.sh  paragraph_ablation_study_benchmark3_250418.sh  pecan_250304.sh  pecan_250308.sh  pecan_250310.sh  pecan_ablation_study_250324_just_esm.sh  refined_search_mipe.sh  refined_search_paragraph.sh  refined_search_paragraph_deep.sh  refined_search_pecan.sh
grid_search/old/: mipe_250310_final.sh  mipe_ablation_study_250324.sh  paragraph_250310_final.sh  pecan_250310_final.sh  pecan_3D_one_hot_train.sh  pecan_ablation_study_250324.sh
grid_search/paired_chain/: mipe_predict_only.sh  paragraph_250422.sh  paragraph_predict_only.sh  paragraph_predict_only_test.sh  pecan_predict_only.sh
paraplume/: EGNN.py  __init__.py  create_dataset.py  infer.py  models.py  predict.py  torch_dataset.py  train.py  train_new.py  utils.py  utils_paired.py  utils_single.py
paraplume/graph_extension/: evaluate_graph.py  graph_torch_dataset.py  predict_graph.py  train_graph_light.py
paraplume/paired_chain/: create_dataset.py  (+4 more)
result/: graph_summary_dict.json
test/: test.csv  train.csv  val.csv
tests/: notebook.ipynb  test.py
tutorial/: custom_train_set.csv  custom_val_set.csv  heavy.csv  tutorial.ipynb
(+34 files in other folders)
