[tool.setuptools]
include-package-data = true
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "paraplume"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
        "ablang2>=0.2.1,<1",
        "antiberty>=0.1.3,<1",
        "numpy>=1.23.5,<2",
        "pandas>=2.2,<3",
        "structlog>=24.0.0,<25",
        "tqdm>=4.66,<5",
        "typer>=0.9,<1",
        "torch>=2.5.0,<3",
        "torchjd>=0.6.0,<1",
        "fair-esm @ git+https://github.com/facebookresearch/esm.git@2b369911bb5b4b0dda914521b9475cad1656b2ac",
        "matplotlib>=3.9.2,<4",
        "biopandas>=0.5.1,<1",
        "scikit-learn>=1.5.2,<2",
        "sentencepiece>=0.2.0,<1",
]
authors = [{name = "Gabriel Athènes", email = "gabriel.athenes@polytechnique.edu"}]
maintainers = [{name = "Gabriel Athènes", email = "gabriel.athenes@polytechnique.edu"}]
description = ''
readme = "README.md"
license = {file = "LICENSE"}
classifiers=[
            'Development Status :: 3 - Alpha',
            'Intended Audience :: Developers',
            'Intended Audience :: Healthcare Industry',
            'Intended Audience :: Science/Research',
            'Topic :: Scientific/Engineering :: Bio-Informatics',
            'Topic :: Scientific/Engineering :: Physics',
            'Topic :: Scientific/Engineering :: Medical Science Apps.',
            'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
            'Natural Language :: English',
            'Programming Language :: Python :: 3.10',
            'Programming Language :: Python :: 3.11',
            'Programming Language :: Python :: 3.12']

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
[tool.setuptools.packages.find]
include = ["paraplume*"]
exclude=["datasets*","grid_search*","notebooks*","trash_code*","single*"]
namespaces = false

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "D",
  "UP",
  "S",
  "BLE",
  "FBT",
  "A",
  "B",
  "C4",
  "EXE",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "RSE",
  "RET",
  "SLF",
  "TID",
  "TCH",
  "ARG",
  "PTH",
  "NPY",
  "RUF",
  "PL"
]
[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
